--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'Converts IDE TODO comments to GitHub issues'
 author: 'Alastair Mooney'
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/alstr/todo-to-issue-action:v4.6'
+  image: 'Dockerfile'
 branding:
   icon: 'check-square'
   color: 'orange'
@@ -46,6 +46,10 @@ inputs:
     description: 'For multiline TODOs, format each line as a new paragraph when creating the issue'
     required: true
     default: true
+  PR:
+     description: 'The current PR number'
+     required: true
+     default: '${{ steps.findPr.outputs.pr }}'
   PROJECTS_SECRET:
     description: 'Encrypted secret corresponding to your personal access token (do not enter the actual secret)'
     required: false
