--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: "actions/checkout@master"
       - name: "TODO to Issue"
-        uses: "alstr/todo-to-issue-action@master"
+        uses: "PhorionTech/todo-to-issue-action@change-create-to-comment"
         id: "todo"
         with:
           PROJECTS_SECRET: ${{ secrets.PROJECTS_SECRET }}
